started working on objects.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
     <script type="text/javascript" src="assignments\arrays.js"></script>
-		<title>Page Title</title>
+    <script type="text/javascript" src="assignments\callbacks.js"></script>
+    <script type="text/javascript" src="assignments\objects.js"></script>
+    		<title>Page Title</title>
 	</head>
 	<body>
 
