arrays.js answers

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <h1>JavaScript I Project</h1>
         
-        <!-- <script src="assignments/arrays.js"></script> -->
         <script src="assignments/objects.js"></script>
+        <script src="assignments/arrays.js"></script>
         <!-- <script src="assignments/stretch-function-conversion.js"></script> -->
     </body>
 </html>
