Stretch - arrow functions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         
         <script src="assignments/objects.js"></script>
         <script src="assignments/arrays.js"></script>
-        <!-- <script src="assignments/stretch-function-conversion.js"></script> -->
+        <script src="assignments/stretch-function-conversion.js"></script>
     </body>
 </html>
