--- a/assignments/index.html
+++ b/assignments/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <script src="objects.js"></script>
-  <!-- <script src="arrays.js"></script> -->
+  <script src="arrays.js"></script>
 
 
 </body>
