Completed array assignments.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./assignments/objects.js"></script>
+    <script src="./assignments/arrays.js"></script>
 </body>
 
 </html>
