completed stretch-function-conversion

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./assignments/arrays.js"></script>
+    <script src="./assignments/stretch-function-conversion.js"></script>
 </body>
 
 </html>
