Completed the object stretch problems.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./assignments/stretch-function-conversion.js"></script>
+    <script src="./assignments/objects.js"></script>
 </body>
 
 </html>
