--- a/assignments/index.html
+++ b/assignments/index.html
@@ -7,7 +7,7 @@
 
   <title>JS I</title>
 
-  <script src="objects.js"></script>
+  <!--<script src="objects.js"></script>-->
   <script src="arrays.js"></script>
   <script src="stretch-function-conversion.js"></script>
 </head>
