--- a/assignments/index.html
+++ b/assignments/index.html
@@ -1,18 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>JS I</title>
+    <title>JS I</title>
 
-  <script src="objects.js"></script>
-  <script src="arrays.js"></script>
-  <script src="stretch-function-conversion.js"></script>
-</head>
+    <script src="objects.js"></script>
+    <script src="arrays.js"></script>
+    <script src="stretch-function-conversion.js"></script>
+    <script src="callbacks.js"></script>
+  </head>
 
-<body>
-<h1>Check your work in the console!</h1>
-</body>
+  <body>
+    <h1>Check your work in the console!</h1>
+  </body>
 </html>
