--- a/assignments/index.html
+++ b/assignments/index.html
@@ -15,4 +15,7 @@
 <body>
 <h1>Check your work in the console!</h1>
 </body>
+<script src="arrays"></script>
+<script src="objects.js"></script>
+<script src="stretch-function-conversion.js"></script>
 </html>
