--- a/assignments/index.html
+++ b/assignments/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!--set up commit-->
   <title>JS I</title>
 
   <script src="objects.js"></script>
