--- a/assignments/index.html
+++ b/assignments/index.html
@@ -7,8 +7,8 @@
 
   <title>JS I</title>
 
-  <!-- <script src="objects.js"></script>
-  <script src="arrays.js"></script> -->
+  <script src="objects.js"></script>
+  <script src="arrays.js"></script>
   <script src="function-conversion.js"></script>
 </head>
 
