--- a/assignments/index.html
+++ b/assignments/index.html
@@ -10,6 +10,7 @@
   <script src="objects.js"></script>
   <script src="arrays.js"></script>
   <script src="stretch-function-conversion.js"></script>
+  <script src="qtest.js"></script>
 </head>
 
 <body>
