Completed objects.js assignment

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>JS I</title>
+  <title>Carlos Banks - JS I</title>
 
   <script src="objects.js"></script>
   <script src="arrays.js"></script>
@@ -13,6 +13,6 @@
 </head>
 
 <body>
-<h1>Check your work in the console! :)</h1>
+<h1>Check your work in the console!</h1>
 </body>
 </html>
